# Qrdia

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  .gitignore  Dockerfile  app.py  database.py  main.py  requirements.txt
backend/app/: config.py  database.py  main.py  models.py
backend/app/routers/: devices.py
cli/: .gitignore  README.md  pyproject.toml
cli/provisioning_cli/: __init__.py  hostapd_client.py  main.py
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ConfigForm.js  ConfigForm.tsx  DemoToggle.tsx  EditDeviceModal.tsx  HistoryTable.js  HistoryTable.tsx  HomePage.tsx  Layout.js  Layout.tsx  QRScanner.js  QRScanner.tsx  ScannedDevicesTable.tsx
frontend/src/components/shadcn/ui/: button.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  PopupWindow.tsx  SectionTitle.tsx  ToggleSwitch.tsx
frontend/src/hooks/: useCamera.ts  useLocalStorage.ts
frontend/src/lib/: api.ts  demo.ts  types.ts  utils.ts
frontend/src/styles/: ConfigForm.css  HistoryTable.css
