[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "provisioning_cli"
version = "0.1.0"
description = "A minimal tool to send commands to hostapd control socket."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
provisioning-cli = "provisioning_cli.main:main"

[tool.setuptools.packages.find]
include = ["provisioning_cli"]
